# midi

./: .gitignore  CMakeLists.txt  Makefile  README.md  chords.cpp  chords.h  chords.hpp  event.cpp  event.h  event.hpp  instruments.h  instruments.hpp  midi.cpp  midi.h  midi.hpp  note.cpp  note.h  note.hpp  scales.cpp  scales.h  scales.hpp  testmidi.cpp  timedivision.cpp  timedivision.h  timedivision.hpp  track.cpp  track.h  track.hpp  varlength.cpp  varlength.h  varlength.hpp
